--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@
 ---
 
 <nav>
-    <a href="#">HJEM</a>
-    <a href="#">OM OS</a>
+    <a href="/">HJEM</a>
+    <a href="/aboutus">OM OS</a>
     <a href="#">IDK</a>
 </nav>
